Fixed SelectToFocusScreen.jsx divs and fixed bug with tool-tip not showing up upon hovering over certain divs.

--- a/my-project/src/index.css
+++ b/my-project/src/index.css
@@ -10,7 +10,7 @@
         @apply bg-white text-base h-20 w-20 border-0.5 border-black text-center rounded-full box-shadow button-hover-effect;
     }
     .icon-tooltip {
-        @apply text-sm rounded-lg h-12 w-20 absolute flex flex-row justify-center items-center text-center bg-white -ml-3 -mt-6 p-0 border-0.5 border-black box-shadow z-50;
+        @apply text-sm rounded-lg h-12 w-20 absolute flex flex-row justify-center items-center text-center bg-white ml-1 -mt-6 border-0.5 border-black box-shadow z-50;
     }
 
     .text-option {
